--- a/index.html
+++ b/index.html
@@ -28,19 +28,22 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#personal">אודות</a>
+                                <a class="nav-link active" aria-current="page"
+                                    href="http://127.0.0.1:5503/Main_Page_HTML/index.html#personal">אודות</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="#gallery">גלריה</a>
+                                <a class="nav-link active"
+                                    href="http://127.0.0.1:5503/Main_Page_HTML/index.html#gallery">גלריה</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="#contact">צור קשר</a>
+                                <a class="nav-link active"
+                                    href="http://127.0.0.1:5503/Main_Page_HTML/index.html#contact">צור קשר</a>
                             </li>
                         </ul>
                     </div>
                     <div id="left">
                         <p>Ari Blashnikov</p>
-                        <a id="ari" href="#homePage">
+                        <a id="ari" href="http://127.0.0.1:5503/Main_Page_HTML/index.html#homePage">
                             <img class="img" src="./images/bff5813e-9a28-42bd-85f2-1d484c847054.jpg"
                                 alt="picture of the developer of this site">
                         </a>
@@ -62,10 +65,8 @@
         <img id="TicTacToe-img" src="./images/ticTacToeBackground4.png" alt="">
         <div class="game-info">
             <h2 id="h2">Tic-Tac-Toe</h2>
-            <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore ab eos deserunt
-                quisquam iure dolores
-                voluptate nobis maxime, nam repudiandae, blanditiis ullam amet ipsa, doloremque facilis aliquam numquam.
-                Expedita, porro!</p>
+            <p class="paragraph">presenting to you today the tic-tac-toe game Lorem ipsum dolor sit amet consectetur
+                adipisicing elit.</p>
             <div class="button-container">
                 <a href="https://alblash.github.io/TicTacToe_js/">
                     <input id="watch-project" type="button" value="לצפייה">
