--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="game-info">
             <h2 id="h2">Tic-Tac-Toe</h2>
             <p class="paragraph">presenting to you today the tic-tac-toe game Lorem ipsum dolor sit amet consectetur
-                adipisicing elit.</p>
+                adipisicing elit. Lorem ipsum dolor sit.</p>
             <div class="button-container">
                 <a href="https://alblash.github.io/TicTacToe_js/">
                     <input id="watch-project" type="button" value="לצפייה">
