--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <img id="TicTacToe-img" src="./images/ticTacToeBackground4.png" alt="">
         <div class="game-info">
             <h2 id="h2">Tic-Tac-Toe</h2>
-            <p class="paragraph">presenting to you today the tic-tac-toe game Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Lorem ipsum dolor sit.</p>
+            <p class="paragraph">מציג בפניכם היום את משחק הטיק-טק-טו נוצר באמצעות HTML & CSS & JavaScript
+            </p>
             <div class="button-container">
                 <a href="https://alblash.github.io/TicTacToe_js/">
                     <input id="watch-project" type="button" value="לצפייה">
