--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page"
-                                    href="http://127.0.0.1:5503/Main_Page_HTML/index.html#personal">אודות</a>
+                                    href="https://alblash.github.io/Protfolio_JS/#personal">אודות</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active"
-                                    href="http://127.0.0.1:5503/Main_Page_HTML/index.html#gallery">גלריה</a>
+                                    href="https://alblash.github.io/Protfolio_JS/index.html#gallery">גלריה</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active"
-                                    href="http://127.0.0.1:5503/Main_Page_HTML/index.html#contact">צור קשר</a>
+                                    href="https://alblash.github.io/Protfolio_JS/index.html#contact">צור קשר</a>
                             </li>
                         </ul>
                     </div>
